--- a/styles/standard/colors.css
+++ b/styles/standard/colors.css
@@ -156,3 +156,7 @@ input, select, textarea, .AJAXUpload {
 	/*background-color:rgba(255, 204, 0, 0.3);*/
 	background-color:rgba(255, 255, 255, 0.5);
 }
+
+.highlight {
+	background-color:rgba(255,204,0,0.3);
+}
