--- a/styles/standard/overlayBox.css
+++ b/styles/standard/overlayBox.css
@@ -5,11 +5,14 @@
 	z-index:98;
 }
 
-#darkOverlay {
+#darkOverlay, .darkOverlay {
 	position:fixed;
 	top:0px;
 	left:0px;
 	z-index:98;
+    width: 100%;
+    height: 100%;
+	background-color:black;
 }
 
 .loginWindow {
