--- a/styles/standard/general.css
+++ b/styles/standard/general.css
@@ -411,24 +411,27 @@ td, th {
 
 h1 {
 	font-size:17px;
-	padding-top:10px;
 	/*padding-left:25px;*/
 	margin-bottom:5px;
-	padding-left:5px;
+	padding:5px;
+	padding-bottom:5px;
+	margin-top:20px;
 }
 
 h2 {
 	font-size:15px;
-	padding-top:5px;
 	/*padding-left:25px;*/
-	margin-bottom:10px;
+	margin-bottom:5px;
+	padding:5px;
+	margin-top:10px;
 }
 
 h3 {
 	font-size:13px;
 	padding-top:5px;
 	/*padding-left:25px;*/
-	margin-bottom:10px;
+	margin-bottom:5px;
+	padding-left:5px;
 }
 
 pre {
@@ -606,12 +609,13 @@ input[name=currentSaveButton] {
 }
 
 .spell {
-	box-shadow: 0px 0px 3px #777;
+	box-shadow: inset 0px 0px 1px #777;
+	/*box-shadow: 0px 0px 3px #777;*/
 }
-
+/*
 .spell:hover {
 	box-shadow: inset 0px 0px 3px #777;
-}
+}*/
 
 .selectionBox {
 	vertical-align:top;
