--- a/styles/standard/navigation.css
+++ b/styles/standard/navigation.css
@@ -18,12 +18,12 @@
 	margin-bottom:-1px;
 	height:28px;
 	-moz-user-select:none;
-	-moz-border-radius-topleft:3px;
+	/*-moz-border-radius-topleft:3px;
 	-webkit-border-top-left-radius:3px;
     -moz-border-radius-topright:3px;
 	-webkit-border-top-right-radius:3px;
 	border-top-left-radius:3px;
-	border-top-right-radius:3px;
+	border-top-right-radius:3px;*/
 	
 	transition: background-color .3s;
 	-moz-transition: background-color .3s; /* Firefox 4 */
@@ -118,9 +118,9 @@
 	border-style:solid;
 	border-width:1px;
 	
-	-moz-box-shadow: 1px -1px 2px #AAA;
+	/*-moz-box-shadow: 1px -1px 2px #AAA;
 	-webkit-box-shadow: 1px -1px 2px #AAA;
-	box-shadow: 1px -1px 2px #AAA;
+	box-shadow: 1px -1px 2px #AAA;*/
 }
 #navigation div.theOne:hover {
 	background-color:white;
