--- a/styles/standard/overlayBox.css
+++ b/styles/standard/overlayBox.css
@@ -26,7 +26,7 @@
 	top:4px;
 	z-index:99;
 	width:430px;
-	padding:4px;
+	/*padding:4px;
 	border-style:solid;
 	border-width:1px;
 	
@@ -36,7 +36,13 @@
 	
 	-moz-box-shadow: 0px 0px 4px 1px #999;
 	-webkit-box-shadow: 0px 0px 4px 1px #999;
-	box-shadow: 0px 0px 4px 1px #999;
+	box-shadow: 0px 0px 4px 1px #999;*/
+	box-shadow: 0px 0px 0px 8px rgba(200, 200, 200, .5);
+	/*border-top-left-radius:5px;
+	border-top-right-radius:5px;*/
+	border-color: #777;
+	border-style:solid;
+	border-width:1px;
 }
 
 #overlayText ul { /*PRESENTATION*/
