--- a/styles/standard/frames.css
+++ b/styles/standard/frames.css
@@ -71,13 +71,12 @@
 	-webkit-box-shadow: -4px -2px 4px #AAA;
 	box-shadow: -4px -2px 4px #AAA;
 }
-
+/*
 #wrapperTable {
 	width:100%;
 	padding:0px;
 	margin:0px;
-	border-collapse:collapse;
-}
+}*/
 
 #wrapperHandler {
 	padding:5px;
@@ -88,12 +87,15 @@
 }
 
 #wrapperTableTd1 {
+	display:inline-block;
 	padding:0px;
 	vertical-align:top;
 	margin:0px;
 }
 
 #wrapperTableTd2 {
+	display:inline-block;
+	float:right;
 	padding:0px;
 	vertical-align:top;
 	margin:0px;
@@ -149,6 +151,10 @@
 
 #contentRight .Tab {
 	/*margin-left:10px;*/
+}
+
+#contentLeft:empty, #contentRight:empty {
+    display:none;
 }
 
 #contentScreen table {
