--- a/styles/standard/frames.css
+++ b/styles/standard/frames.css
@@ -93,6 +93,14 @@
 	margin:0px;
 }
 
+#wrapperTableTd3 {
+	display:inline-block;
+	padding:0px;
+	float:right;
+	vertical-align:top;
+	margin:0px;
+}
+
 #wrapperTableTd2 {
 	display:inline-block;
 	float:right;
@@ -135,14 +143,14 @@
 }
 */
 
-#contentRight {
+#contentRight, #contentCenter {
 	margin-left:auto;
 	padding-bottom:10px;
 	padding-top:10px;
 	width:400px;
 }
 
-#contentRight table {
+#contentRight table, #contentCenter table {
 	border-right-width:1px;
 	border-right-style: solid;
 	margin-right:10px;
@@ -153,7 +161,7 @@
 	/*margin-left:10px;*/
 }
 
-#contentLeft:empty, #contentRight:empty {
+#contentLeft:empty, #contentRight:empty, #contentCenter:empty {
     display:none;
 }
 
