improved UPnP Mediacenter and Radio player improved shopping list updated framework

--- a/styles/standard/frames.css
+++ b/styles/standard/frames.css
@@ -162,7 +162,8 @@
 }
 
 #contentLeft:empty, #contentRight:empty, #contentCenter:empty {
-    display:none;
+    /*display:none;*/
+	padding:0px;
 }
 
 #contentScreen table {
