--- a/styles/standard/general.css
+++ b/styles/standard/general.css
@@ -735,9 +735,9 @@ input[type=button][name=currentSaveButton], input[type=button][name=submitForm] 
 	box-shadow: 0px 0px 2px #777;*/
 	box-shadow: 0px 0px 0px 8px rgba(200, 200, 200, .5);
 	width:200px;
-	border-color: #777;
+	/*border-color: #777;
 	border-width:1px;
-	border-style:solid;
+	border-style:solid;*/
 	position:fixed;
 	min-height:200px;
 }
@@ -762,11 +762,11 @@ input[type=button][name=currentSaveButton], input[type=button][name=submitForm] 
 .qq-upload-button-focus {outline:1px dotted black;}
 
 .qq-upload-drop-area, .qq-upload-extra-drop-area {
-    position:absolute; top:0; left:0; width:100%; height:100%; min-height: 70px; z-index:2;
+    position:absolute; top:0; left:0; width:100%; height:100%; min-height: 25px; z-index:2;
     background:#8EAC1B; text-align:center;
 }
 .qq-upload-drop-area span {
-    display:block; position:absolute; top: 50%; width:100%; margin-top:-8px; font-size:16px;
+    display:block; position:absolute; width:100%; /*margin-top:-8px;*/ font-size:13px;
 }
 .qq-upload-extra-drop-area {
 	position: relative;
