--- a/styles/standard/frames.css
+++ b/styles/standard/frames.css
@@ -155,6 +155,22 @@ caption {
 	width:95%;
 }
 
+
+@media only screen and (max-width: 1000px) {
+	#wrapperTableTd1 {
+		width:100%;
+		position:absolute;
+		top:0;
+		left:0;
+		z-index: 100;
+		background-color: white;
+	}
+	
+	#contentRight {
+		//width:100%;
+	}
+}
+
 #phim {
 	position:fixed;
 	width:19px;
